# feeds2email

./: README.md  pyproject.toml
feedpipes/: config.py
