[tool.poetry]
name = "rss2email"
version = "0.1.0"
description = ""
authors = ["Kazuya Mitsutani <Kazuya.Mitsutani@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
feedparser = "^6.0.11"
python-crontab = "^3.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
